--- a/week03/notebooks/04_ranking.ipynb
+++ b/week03/notebooks/04_ranking.ipynb
@@ -29,22 +29,11 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "# Define the path to the directory containing the text files\n",
-    "CORPUS_DIR = '../../week01/data'\n",
-    "documents = {}\n",
-    "for filename in os.listdir(CORPUS_DIR):\n",
-    "    if filename.endswith('.txt'):\n",
-    "        file_path = os.path.join(CORPUS_DIR, filename)\n",
-    "        with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "            documents[filename] = file.read().lower()  # Read and convert to lowercase"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "a185456ec7a7c810"
+   "id": "32bb5e60eaca32c1"
   },
   {
    "cell_type": "markdown",
@@ -65,13 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "870f69c4c79d1548"
   },
   {
    "cell_type": "markdown",
