--- a/week03/notebooks/04_ranking.ipynb
+++ b/week03/notebooks/04_ranking.ipynb
@@ -31,9 +31,14 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T13:16:42.108239Z",
+     "start_time": "2024-05-07T13:16:42.092442Z"
+    }
    },
-   "id": "32bb5e60eaca32c1"
+   "id": "32bb5e60eaca32c1",
+   "execution_count": 0
   },
   {
    "cell_type": "markdown",
@@ -57,9 +62,14 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T13:16:42.124330Z",
+     "start_time": "2024-05-07T13:16:42.110239Z"
+    }
    },
-   "id": "870f69c4c79d1548"
+   "id": "870f69c4c79d1548",
+   "execution_count": 0
   },
   {
    "cell_type": "markdown",
@@ -84,9 +94,28 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T13:16:42.139785Z",
+     "start_time": "2024-05-07T13:16:42.125338Z"
+    }
    },
-   "id": "b0392aa935dc471b"
+   "id": "b0392aa935dc471b",
+   "execution_count": 0
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-07T13:17:01.856571Z",
+     "start_time": "2024-05-07T13:17:01.847233Z"
+    }
+   },
+   "id": "95dc6da75afd1a5",
+   "execution_count": 0
   }
  ],
  "metadata": {
