--- a/week03/notebooks/04_ranking.ipynb
+++ b/week03/notebooks/04_ranking.ipynb
@@ -29,16 +29,27 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Define the path to the directory containing the text files\n",
+    "CORPUS_DIR = '../../week01/data'\n",
+    "documents = {}\n",
+    "for filename in os.listdir(CORPUS_DIR):\n",
+    "    if filename.endswith('.txt'):\n",
+    "        file_path = os.path.join(CORPUS_DIR, filename)\n",
+    "        with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "            documents[filename] = file.read().lower()  # Read and convert to lowercase"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:16:42.108239Z",
-     "start_time": "2024-05-07T13:16:42.092442Z"
+     "end_time": "2024-05-07T13:18:16.854511Z",
+     "start_time": "2024-05-07T13:18:14.438393Z"
     }
    },
-   "id": "32bb5e60eaca32c1",
-   "execution_count": 0
+   "id": "a185456ec7a7c810",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -64,12 +75,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:16:42.124330Z",
-     "start_time": "2024-05-07T13:16:42.110239Z"
+     "end_time": "2024-05-07T13:18:16.869494Z",
+     "start_time": "2024-05-07T13:18:16.856515Z"
     }
    },
-   "id": "870f69c4c79d1548",
-   "execution_count": 0
+   "id": "initial_id",
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -96,26 +107,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:16:42.139785Z",
-     "start_time": "2024-05-07T13:16:42.125338Z"
+     "end_time": "2024-05-07T13:18:16.884740Z",
+     "start_time": "2024-05-07T13:18:16.870498Z"
     }
    },
    "id": "b0392aa935dc471b",
-   "execution_count": 0
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-07T13:17:01.856571Z",
-     "start_time": "2024-05-07T13:17:01.847233Z"
-    }
-   },
-   "id": "95dc6da75afd1a5",
-   "execution_count": 0
+   "execution_count": 1
   }
  ],
  "metadata": {
