--- a/week08/exam.ipynb
+++ b/week08/exam.ipynb
@@ -279,13 +279,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-13T16:16:35.785300Z",
-     "start_time": "2024-06-13T16:16:35.773883Z"
+     "end_time": "2024-06-13T16:21:58.532562Z",
+     "start_time": "2024-06-13T16:21:58.508319Z"
     }
    },
    "cell_type": "code",
    "source": [
     "for i in range(len(queries)):\n",
+    "    print('-------------------------------------------------------')\n",
     "    print('QUERY: ',i,read_queries[i])\n",
     "    for j in range(0,len(ev_docs)):\n",
     "        #print(queries[i],ev_docs[j])\n",
@@ -300,6 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-------------------------------------------------------\n",
       "QUERY:  0 hablidad AND blanda AND fundamental\n",
       "doc 0 Jsim 0.25\n",
       "Las habilidades blandas son fundamentales para el éxito en el campo de la informática. Estas habilidades fundamentales incluyen la comunicación efectiva, la capacidad de trabajar en equipo y la gestión del tiempo.\n",
@@ -307,6 +309,7 @@
       "El desarrollo de habilidades blandas es fundamental para los informáticos, ya que estas competencias facilitan la interacción y colaboración en entornos de trabajo dinámicos.\n",
       "doc 3 Jsim 0.2\n",
       "La empatía, por ejemplo, es una habilidad blanda que permite a los profesionales de la informática entender y anticipar las necesidades fundamentales de los usuarios, mejorando así la calidad de los productos y técnicas desarrolladas.\n",
+      "-------------------------------------------------------\n",
       "QUERY:  1 hablidad AND blanda AND NOT técnica\n",
       "doc 0 Jsim 0.4444444444444444\n",
       "Las habilidades blandas son fundamentales para el éxito en el campo de la informática. Estas habilidades fundamentales incluyen la comunicación efectiva, la capacidad de trabajar en equipo y la gestión del tiempo.\n",
@@ -318,6 +321,7 @@
       "La empatía, por ejemplo, es una habilidad blanda que permite a los profesionales de la informática entender y anticipar las necesidades fundamentales de los usuarios, mejorando así la calidad de los productos y técnicas desarrolladas.\n",
       "doc 4 Jsim 0.6666666666666666\n",
       "La inteligencia emocional es una habilidad blanda vital para los informáticos. Permite gestionar mejor las emociones propias y las de los demás, facilitando así un entorno de trabajo más armonioso y productivo.\n",
+      "-------------------------------------------------------\n",
       "QUERY:  2 gestión OR solución\n",
       "doc 0 Jsim 0.2\n",
       "Las habilidades blandas son fundamentales para el éxito en el campo de la informática. Estas habilidades fundamentales incluyen la comunicación efectiva, la capacidad de trabajar en equipo y la gestión del tiempo.\n",
@@ -328,7 +332,7 @@
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -337,6 +341,75 @@
    "execution_count": null,
    "source": "",
    "id": "4f8b836f327288dd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 4. Con el mismo espacio vectorial del punto 1, construya una matriz de términos y documentos (matriz TF-IDF).",
+   "id": "9bb0f4f00050dc6a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "dae62d05079b0a1e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 5. Calcule el vector de la consulta utilizando las mismas fórmulas de TF-IDF.",
+   "id": "4cf3c1efabaaa880"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "84a4e509395fb02a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 6. Utilizando la similitud coseno, determine cuáles son los documentos por recuperarse para las siguientes consultas:\n",
+    "6.1. “habilidades blandas fundamentales”\n",
+    "\n",
+    "6.2. “habilidades técnicas”\n",
+    "\n",
+    "6.3. “solución y gestión en informática”"
+   ],
+   "id": "9919b6ff27b500f7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ddfae35f1a8c519e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 7. Ordene los documentos en función de su similitud con la consulta, de mayor a menor.",
+   "id": "a54de9eb09c5e966"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "cb9a2e56fde5c0c8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 8. Determine cuál es el documento más relevante para la consulta dada.",
+   "id": "8cd4938aed7cae14"
   }
  ],
  "metadata": {
