--- a/week08/exam.ipynb
+++ b/week08/exam.ipynb
@@ -350,6 +350,16 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Frecuencia de término: $TF_{ij}=count(t_i,d_j)/|d_j|$\n",
+    "\n",
+    "Frecuencia inversa de término: $IDF_{ij} = log(|corpus|/count(d_j,t_i))$"
+   ],
+   "id": "24ca205bbea581f5"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -369,6 +379,12 @@
    "execution_count": null,
    "source": "",
    "id": "84a4e509395fb02a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "21571a443a3a22ef"
   },
   {
    "metadata": {},
