--- a/week10/embeddings_ir.ipynb
+++ b/week10/embeddings_ir.ipynb
@@ -4,6 +4,54 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "# Integrating Embeddings with Queries in an Information Retrieval System\n",
+    "\n",
+    "## Objective\n",
+    "\n",
+    "In this exercise, we will learn how to integrate embeddings with a query to enhance an Information Retrieval (IR) system. We will use both static and contextual embeddings to generate representations of queries and documents, compute their similarities, and rank the documents based on relevance to the query.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Stages Covered\n",
+    "\n",
+    "1. **Introduction to Pre-trained Transformer Models**\n",
+    "   - Load and use BERT for contextual embeddings.\n",
+    "   - Load and use Word2Vec for static embeddings.\n",
+    "\n",
+    "2. **Generating Text Embeddings**\n",
+    "   - Generate embeddings for queries and documents using BERT.\n",
+    "   - Generate embeddings for queries and documents using Word2Vec.\n",
+    "\n",
+    "3. **Computing Similarity Between Embeddings**\n",
+    "   - Compute cosine similarity between query and document embeddings.\n",
+    "   - Rank documents based on similarity scores.\n",
+    "\n",
+    "4. **Integrating Embeddings with Queries**\n",
+    "   - Practical implementation of embedding-based retrieval for a given text corpus.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- TensorFlow\n",
+    "- Hugging Face's Transformers library\n",
+    "- Gensim library\n",
+    "- Scikit-learn library\n",
+    "- A text corpus in the `../data` folder\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Exercise\n",
+    "\n",
+    "Follow the steps below to integrate embeddings with a query and enhance your IR system.\n",
+    "\n"
+   ],
+   "id": "ab838f6833b5dfdb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "Step 0: Verify requirements:\n",
     "\n",
     "* tensorflow\n",
@@ -33,10 +81,10 @@
    },
    "cell_type": "code",
    "source": [
-    "#import kaggle\n",
+    "import kaggle\n",
     "import pandas as pd\n",
     "\n",
-    "#kaggle.api.dataset_download_cli(dataset='zynicide/wine-reviews')\n",
+    "kaggle.api.dataset_download_cli(dataset='zynicide/wine-reviews')\n",
     "\n",
     "wine_df = pd.read_csv('data/winemag-data_first150k.csv')\n",
     "print(wine_df.head())\n",
